[package]
name = "rusty-roproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
shuttle-rocket = "*"
shuttle-runtime = "*"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "*", features = ["json", "cookies"] }
tracing = { version = "*", features = ["log"] }
tracing-subscriber = { version = "*", features = ["env-filter"] }
anyhow = "*"
form_urlencoded = "*"